# Solana_static_html

./: Anchor.toml
docs/: index.html
programs/solana-static-html/: Cargo.toml
programs/solana-static-html/src/: lib.rs
tests/: solana-static-html.ts
